# learnsomething

./: CMakeLists.txt  Driver.py  main.cpp  prime.cpp  prime.h  prime.py
src/: hackathonbot.cpp  hackathonbot.h  improved.py  interface.py  pricingutil.cpp
tst/: test_pricingutil.cpp  test_traderisktracker.cpp
